deploy.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doodlio-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doodlio-back
  template:
    metadata:
      labels:
        app: doodlio-back
    spec:
      containers:
        - name: doodlio-back
          image: registry.doodlio.ac/backend-doodlio:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      imagePullSecrets:
        - name: nexus-registry-secret
---
# svc
apiVersion: v1
kind: Service
metadata:
  name: doodlio-back
spec:
  selector:
    app: doodlio-back
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-api.doodlio.ac
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - dev-api.doodlio.ac
      secretName: dev-api.doodlio.ac-tls
  rules:
    - host: dev-api.doodlio.ac
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doodlio-back
                port:
                  number: 3000
